// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should be rendered correctly 1`] = `
<div
  className="container root size-18 theme-light color-sky -clickable"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="uui-checkbox uui-checked"
  >
    <div
      className="container uui-icon uui-enabled"
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#checkbox-checked.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Checkbox should be rendered correctly with new props 1`] = `
<div
  className="container root size-12 theme-dark color-sun -clickable"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="uui-checkbox uui-checked"
  >
    <div
      className="container uui-icon uui-enabled"
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#checkbox-checked.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;
